# Source-Assist

./: .gitignore  .vercelignore  CLAUDE.md  README.md  app.py  pyproject.toml  requirements.txt
Source-Assist/: background.js  manifest.json  popup.css  popup.html  popup.js
backend/core/: config.py  security.py
backend/features/auth/: routes.py  schemas.py  service.py
backend/features/profile_extract/: routes.py  schema.py  service.py
backend/infra/: database.py  email.py
docs/: index.html  privacy-policy.html
