[project]
name = "plugin-tool"
version = "0.1.0"
description = "SourceAssist - AI-powered consultant profile extractor"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "openai>=1.50.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.12",
    "pydantic>=2.0.0",
    "psycopg2-binary>=2.9",
    "bcrypt>=4.0",
    "pyjwt>=2.8",
    "pypdf>=6.10.2",
]
